[gd_scene load_steps=3 format=3 uid="uid://ccjttrcjrs2pu"]

[ext_resource type="Texture2D" uid="uid://bli3yxspw0p1b" path="res://Art/galleonnavy.png" id="1_i4gbk"]
[ext_resource type="Script" path="res://Scripts/enemygalleon.gd" id="1_j03yk"]

[node name="Enemy" type="CharacterBody2D"]
visible = false
script = ExtResource("1_j03yk")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(1.75, 1.75)
texture = ExtResource("1_i4gbk")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-33, -24, -13, -24, -13, -22, 11, -21, 33, -12, 47, -3, 47, 3, 32, 12, 12, 20, -12, 22, -12, 24, -33, 24, -47, 15, -54, 3, -54, -3, -47, -15)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-33, -24, -13, -24, -13, -22, 11, -21, 33, -12, 47, -3, 47, 3, 32, 12, 12, 20, -12, 22, -12, 24, -33, 24, -47, 15, -54, 3, -54, -3, -47, -15)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="Nav" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 1.0
avoidance_enabled = true
radius = 20.0
debug_enabled = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Nav" to="." method="_on_nav_timeout"]
